# HesaiLidar_General_SDK

./: CMakeLists.txt
include/pandarGeneral_sdk/: pandarGeneral_sdk.h
src/: pandarGeneral_sdk.cc  tcp_command_client.c  util.c  wrapper.cc
src/PandarGeneralRaw/: CMakeLists.txt
src/PandarGeneralRaw/include/pandarGeneral/: pandarGeneral.h  pandarGeneral_internal.h  pcap_reader.h  point_types.h
src/PandarGeneralRaw/src/: input.cc  pandarGeneral.cc  pandarGeneral_internal.cc  pcap_reader.cpp
test/: test.cc
